<resources>
    <string name="app_name">Віднови слово</string>
    <string name="settings">Налаштування</string>
    <string name="startGame">Розпочати гру</string>
    <string name="info">Розробник: Валерій Кравченко.</string>
    <string name="textview">-</string>
    <string name="title_activity_settings">Налаштування</string>
    <string name="word_header">Слова</string>
    <string name="word_answer">Підказки</string>
    <string name="word_4_char">Слова з 4 літер</string>
    <string name="word_5_char">Слова з 5 літер</string>
    <string name="word_6_char">Слова з 6 літер</string>
    <string name="word_7_char">Слова з 7 літер</string>
    <string name="word_8_char">Слова з 8 літер</string>
    <string name="word_9_char">Слова з 9 літер</string>
    <string name="timer_header">Час</string>
    <string name="timer">00:00</string>

    <string name="word_title">Кількість букв в слові:</string>
    <string-array name="words">
        <item>4 літери</item>
        <item>5 літер</item>
        <item>6 літер</item>
        <item>7 літер</item>
        <item>8 літер</item>
        <item>9 літер</item>
    </string-array>

    <string name="timer_title">Час складання слів:</string>
    <string-array name="timers">
        <item>1 хвилина</item>
        <item>2 хвилини</item>
        <item>5 хвилин</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>